# cubesat

./: .gitignore  README.md  pyproject.toml  run_cases.py  run_crater.py  run_simulation.py  run_synthesis_demo.py
cubesat_sim/: __init__.py  beams.py  constants.py  extended.py  forward.py  fts.py  imaging.py  parameters.py  radiometry.py  reduction.py  scenes.py  singlebaseline.py  sky.py  uvcoverage.py  validate.py
docs/: cubesat_simulator.tex
tests/: test_extended.py  test_physics.py  test_singlebaseline.py
